# gatekeeper

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
db/: .env.example  Cargo.toml
db/migrations/2020-03-01-221253_create_realms/: up.sql
db/migrations/2020-03-04-044544_create_users/: up.sql
db/migrations/2020-03-08-194256_create_groups/: up.sql
db/migrations/2020-03-09-022530_create_users_groups/: up.sql
db/migrations/2020-03-12-053121_create_roles/: up.sql
db/migrations/2020-03-12-053126_create_users_roles/: up.sql
db/migrations/2020-03-12-064349_create_groups_roles/: down.sql  up.sql
db/migrations/2020-03-18-053125_create_permissions/: down.sql  up.sql
db/src/: connection.rs  lib.rs  models.rs  repository.rs  schema.rs
db/src/models/: group.rs  mod.rs  permission.rs  realm.rs  role.rs  user.rs
db/src/queries/: groups.rs  mod.rs  permissions.rs  realms.rs  roles.rs  users.rs
domain/: Cargo.toml
domain/src/: errors.rs  lib.rs  repository.rs
domain/src/groups/: model.rs
domain/src/permissions/: model.rs
domain/src/realms/: errors.rs  mod.rs  model.rs
domain/src/roles/: model.rs
domain/src/users/: model.rs
http/: Cargo.toml
http/src/: errors.rs  lib.rs  routes.rs  server.rs
http/src/handlers/: index.rs  mod.rs
http/src/handlers/groups/: actions.rs  delete.rs  list.rs  mod.rs  responses.rs  update.rs
http/src/handlers/permissions/: actions.rs  delete.rs  list.rs  mod.rs  responses.rs  update.rs
http/src/handlers/realms/: actions.rs  create.rs  delete.rs  list.rs  mod.rs  responses.rs  update.rs
http/src/handlers/roles/: actions.rs  delete.rs  list.rs  responses.rs  update.rs
http/src/handlers/users/: actions.rs  delete.rs  list.rs  mod.rs  responses.rs  update.rs
src/: main.rs
ui/: .eslintrc  package.json  tslint.json
ui/public/: index.html
ui/src/: App.tsx  index.scss  index.tsx  store.tsx  types.ts
ui/src/app/: App.scss  App.tsx  rootReducer.ts  store.ts
ui/src/http/: index.ts
ui/src/pages/: index.ts
(+97 files in other folders)
