[package]
name = "gatekeeper"
version = "0.1.0"
authors = ["David Wilkins <david@drayalliance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { package = "db", path = "./db" }
domain = { package = "domain", path = "./domain" }
http = { package = "http", path = "./http" }
dotenv = "0.9.0"
tokio = { version = "0.2.11", features = ["macros"] }