[package]
name = "db"
version = "0.1.0"
authors = ["David Wilkins <david@drayalliance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
domain = { package = "domain", path = "../domain" }
