[package]
name = "domain"
version = "0.1.0"
authors = ["David Wilkins <david@drayalliance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7.4", features = ["serde", "v4"] }
chrono = { version = "0.4.6", features = ["serde"] }
thiserror = "1.0.9"
anyhow = "1.0.26"