[package]
name = "http"
version = "0.1.0"
authors = ["David Wilkins <david@drayalliance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { package = "db", path = "../db" }
domain = { package = "domain", path = "../domain" }
tokio = { version = "0.2.11", features = ["macros"] }
warp = "0.2.1"
serde = "1.0.91"
serde_derive = "1.0.104"
uuid = { version = "0.7.4", features = ["serde", "v4"] }